name:                morse
version:             0.1.0.0
synopsis:            Tool to convert input to PCM morse code
-- description:         
license:             MIT
license-file:        LICENSE
author:              Fritz Grimpen
maintainer:          fritz@grimpen.net
copyright:           2015 Fritz Grimpen
category:            Sound
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable morse
  main-is:             Main.hs
  build-depends:       base < 5, bytestring, containers
  default-language:    Haskell2010

library
  exposed-modules:     Sound.Morse
  build-depends:       base < 5, containers
  default-language:    Haskell2010

